test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_external_library_function_as_suffix.sol
library L {
    function suffix(uint x) external pure returns (uint) { return x; }
}

contract C {
    uint x = 1000 L.suffix;
}
// ----
// DeclarationError 7920: (117-125): Identifier not found or not unique.
